activities/envolopToUsers2018/sourcecode/css/index.css
* {
    -webkit-tap-highlight-color: rgba(0,0,0,0); 
}

body {
    -webkit-touch-callout: none;   
    -webkit-text-size-adjust: none;  
    -webkit-user-select: none;   
    background-attachment:fixed;
    background-repeat: no-repeat;
    background-size: cover;
    width:1920px;
    height: 1080px;
    margin:0px;
    padding:0px;
    font-size: 0;
}

.containerClass {
	position: relative;
	top: 0;
	left: 0;
	width: 1920px;
}

.containerClass img {
	width: 100%;
	height: 100%;
}

/*当为少儿版面时*/
#deviceready[class~=kidsPage] #bgImage4{
	display: none;
}
#deviceready[class~=kidsPage] #block2{
	display: none;
}
#deviceready[class~=kidsPage] #block3{
	top: 1980px;
}
#deviceready[class~=kidsPage] #button1{
	top: 2620px;
	left: 585px;
}
#deviceready[class~=kidsPage] #button2{
	display: none;
}
.block{
	position: absolute;
	left: 162px;
	width: 780px;
	height: 400px;
	background-size: cover;
	background-repeat: no-repeat;
	transition: transform 0.2s;
	-webkit-transition: transform 0.2s;
	border: 12px solid transparent;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}
#block1 {
	top: 1484px;
	background-image: url(../img/iconKids.jpg);	
}
#block2 {
	top: 1980px;
	background-image: url(../img/iconEdu.jpg);	
}
#block3 {
	top: 2467px;
	background-image: url(../img/iconTVClassroom.jpg);	
}

#button1 {
	top: 3107px;
	left: 173px;
	width: 750px;
	height: 225px;	
	background-image: url(../img/kidsVip.png);	
}
#button2 {
	top: 3107px;
	left: 1000px;
	width: 750px;
	height: 225px;	
	background-image: url(../img/eduVip.png);	
}

.btn-focus[class~=block] {
    border: 12px solid #ffff00;
    /*border-image-source:url(../img/focusBlock.png);
    border-image-slice:8;
    border-image-width:4;
    border-image-repeat:round;*/
    /*padding: 0px;
    opacity: 1;*/
    /*box-shadow: 0px 0px 0px 0px black;
    box-shadow:0px 10px 25px rgba(0,0,0,0.5);*/
    -ms-transform: scale(1.05, 1.05);
    /* IE 9 */
    -o-transform: scale(1.05, 1.05);
    /* Opera */
    -moz-transform: scale(1.05, 1.05);
    -webkit-transform: scale(1.05, 1.05);
    /* Safari 和 Chrome */
    transform: scale(1.05, 1.05);
    z-index: 2;	
}

[id^="virtualKey"] {
	position: absolute;
	left: 173px;
	width: 100px;
	height: 100px;
}
#virtualKey1 {	top: 0px; }
#virtualKey2 {	top: 480px; }

